# PytorchToBoard

./: README.md  pipeline_spec.html  文档调整记录.md
NNFramework-main/: .gitignore  run_model_to_board.py
NNFramework-main/artifacts/latest_run/: entrypoint_summary.json  resolved_config.yaml
NNFramework-main/in/: model.py  prepare_calibration_data.py  train_1s.yaml
NNFramework-main/in/calibration_data/: calibration_input_nchw.npy  calibration_input_nhwc.npy  manifest.json  summary.json
NNFramework-main/pipeline/: __init__.py  board_runtime_contract.py  cli.py  exceptions.py  orchestrator.py  paths.py  selection.py  types.py
NNFramework-main/pipeline/analyze/: __init__.py  build_capability_report.py  capability_db.py
NNFramework-main/pipeline/board/: __init__.py  tflite2cppfile.py  tflite_op_registry.py
NNFramework-main/pipeline/common/: calibration_targets.py  checkpoint_loader.py  frontend_shape_utils.py  input_data.py  onnx_export_config.py  representative_calibration.py  runtime_env.py
NNFramework-main/pipeline/export/: __init__.py  export_candidates.py  torch2int8_tflite.py  (+1 more)
pencilv_stage_tflite_end2end/: CMakeLists.txt  prj.conf
pencilv_stage_tflite_end2end/boards/arm/pencilv/: Kconfig.defconfig  Kconfig.pencilv  board.cmake  board.yml  pencilv-pinctrl.dtsi  pencilv_nrf5340_cpuapp.dts  pencilv_nrf5340_cpuapp.yaml  pencilv_nrf5340_cpuapp_defconfig
pencilv_stage_tflite_end2end/src/: main.cpp
pencilv_stage_tflite_end2end/tools/: identify_model_pt.py  identify_model_py.py  precheck_model.py
pencilv_stage_tflite_end2end/tools/in/: best_model.pt  model.py
(+40 files in other folders)
